# hica

./: .env.example  .gitignore  CONTRIBUTING.md  LICENCE  README.md  enhanced_subagent_blog.md  file_explaination.md  pyproject.toml  test.py
.github/workflows/: pypi-publish.yml
docs/: amp_hica_blog.md  context_engineering_subagents.md  gemini-cli-vs-hica.md  gemini_index.md  gemini_memport.md  gemini_tools.md  improvement_suggestions.md  sub_agent_management.md  subagent_blog.md
example/: calculator_tools.py  file_tools.py  main_file_tools.py
examples/: db.sqlite  human_in_loop_example.py  main.py  main_async_generator.py  main_mcp_tool.py  mcp_client.py  server_local.py  server_mcp.py  sqlite_mcp_tools.py  streamlit_app.py
examples/async/: async_agent_loop.py  example_tools.py
examples/bash_agent/: bash_tools.py  main.py
examples/basic/: basic_agent.py  email_outreach.py  large_context_only.py  main.py  pubmed_rag.py  tools_with_context.py  workflow.py
examples/human_in_loop/: human_in_loop_example.py
examples/mcp/: calculator_mcp_tools.py  grep_example.py  structured_content_example.py  user_profile_mcp.py
examples/subagent/codeinterpreter/: main.py  tools.py
examples/subagent/filemanipulation/: main.py  tools.py
examples/web_app/: README.md  polling_streamlit_app.py  server_local.py  server_mcp.py  streamlit_app.py
src/example/: main.py
src/hica/: README.md  __init__.py  agent.py  agent.py.bak  cli.py  core.py  logging.py  memory.py  models.py  server.py  state.py  tools.py
src/reference/: llm_mcp_client.py
tests/: file_based_store.py  prompts.json  test_instructor_api.py  test_mongo_memory_store.py  test_promptstore.py  test_pydantic_model.py  test_pymongo.py  test_thread_model.py  test_tool_call.py  threads.json
